3/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    RARROW
    CASE
    OF
    ESAC

Grammar

Rule 0     S' -> program
Rule 1     program -> classlist
Rule 2     classlist -> class SEMI
Rule 3     classlist -> class SEMI classlist
Rule 4     class -> CLASS type LBRACE featurelist RBRACE
Rule 5     class -> CLASS type INHERITS type LBRACE featurelist RBRACE
Rule 6     featurelist -> <empty>
Rule 7     featurelist -> feature SEMI featurelist
Rule 8     feature -> identifier COLON type
Rule 9     feature -> identifier COLON type LARROW expr
Rule 10    feature -> identifier LPAREN formallist RPAREN COLON type LBRACE expr RBRACE
Rule 11    feature -> identifier LPAREN RPAREN COLON type LBRACE expr RBRACE
Rule 12    formallist -> formal
Rule 13    formallist -> formal COMMA formallist
Rule 14    formal -> identifier COLON type
Rule 15    type -> TYPE
Rule 16    identifier -> IDENTIFIER
Rule 17    expr -> identifier LARROW expr
Rule 18    expr -> expr DOT identifier LPAREN arglist RPAREN
Rule 19    expr -> expr AT type DOT identifier LPAREN arglist RPAREN
Rule 20    expr -> identifier LPAREN arglist RPAREN
Rule 21    exprlist -> expr SEMI
Rule 22    exprlist -> expr SEMI exprlist
Rule 23    Barglist -> COMMA expr Barglist
Rule 24    Barglist -> <empty>
Rule 25    arglist -> expr Barglist
Rule 26    arglist -> <empty>
Rule 27    expr -> IF expr THEN expr ELSE expr FI
Rule 28    expr -> WHILE expr LOOP expr POOL
Rule 29    expr -> LBRACE exprlist RBRACE
Rule 30    expr -> NEW type
Rule 31    expr -> ISVOID expr
Rule 32    expr -> expr PLUS expr
Rule 33    expr -> expr MINUS expr
Rule 34    expr -> expr TIMES expr
Rule 35    expr -> expr DIVIDE expr
Rule 36    expr -> TILDE expr
Rule 37    expr -> expr LT expr
Rule 38    expr -> expr LE expr
Rule 39    expr -> expr EQUALS expr
Rule 40    expr -> NOT expr
Rule 41    expr -> LPAREN expr RPAREN
Rule 42    expr -> identifier
Rule 43    expr -> INTEGER
Rule 44    expr -> STRING
Rule 45    expr -> TRUE
Rule 46    expr -> FALSE
Rule 47    expr -> LET bindinglist IN expr
Rule 48    bindinglist -> binding
Rule 49    bindinglist -> binding COMMA bindinglist
Rule 50    binding -> identifier COLON type
Rule 51    binding -> identifier COLON type LARROW expr

Terminals, with rules where they appear

AT                   : 19
CASE                 : 
CLASS                : 4 5
COLON                : 8 9 10 11 14 50 51
COMMA                : 13 23 49
DIVIDE               : 35
DOT                  : 18 19
ELSE                 : 27
EQUALS               : 39
ESAC                 : 
FALSE                : 46
FI                   : 27
IDENTIFIER           : 16
IF                   : 27
IN                   : 47
INHERITS             : 5
INTEGER              : 43
ISVOID               : 31
LARROW               : 9 17 51
LBRACE               : 4 5 10 11 29
LE                   : 38
LET                  : 47
LOOP                 : 28
LPAREN               : 10 11 18 19 20 41
LT                   : 37
MINUS                : 33
NEW                  : 30
NOT                  : 40
OF                   : 
PLUS                 : 32
POOL                 : 28
RARROW               : 
RBRACE               : 4 5 10 11 29
RPAREN               : 10 11 18 19 20 41
SEMI                 : 2 3 7 21 22
STRING               : 44
THEN                 : 27
TILDE                : 36
TIMES                : 34
TRUE                 : 45
TYPE                 : 15
WHILE                : 28
error                : 

Nonterminals, with rules where they appear

Barglist             : 23 25
arglist              : 18 19 20
binding              : 48 49
bindinglist          : 47 49
class                : 2 3
classlist            : 1 3
expr                 : 9 10 11 17 18 19 21 22 23 25 27 27 27 28 28 31 32 32 33 33 34 34 35 35 36 37 37 38 38 39 39 40 41 47 51
exprlist             : 22 29
feature              : 7
featurelist          : 4 5 7
formal               : 12 13
formallist           : 10 13
identifier           : 8 9 10 11 14 17 18 19 20 42 50 51
program              : 0
type                 : 4 5 5 8 9 10 11 14 19 30 50 51

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . classlist
    (2) classlist -> . class SEMI
    (3) classlist -> . class SEMI classlist
    (4) class -> . CLASS type LBRACE featurelist RBRACE
    (5) class -> . CLASS type INHERITS type LBRACE featurelist RBRACE

    CLASS           shift and go to state 2

    classlist                      shift and go to state 1
    program                        shift and go to state 3
    class                          shift and go to state 4

state 1

    (1) program -> classlist .

    $end            reduce using rule 1 (program -> classlist .)


state 2

    (4) class -> CLASS . type LBRACE featurelist RBRACE
    (5) class -> CLASS . type INHERITS type LBRACE featurelist RBRACE
    (15) type -> . TYPE

    TYPE            shift and go to state 5

    type                           shift and go to state 6

state 3

    (0) S' -> program .



state 4

    (2) classlist -> class . SEMI
    (3) classlist -> class . SEMI classlist

    SEMI            shift and go to state 7


state 5

    (15) type -> TYPE .

    DOT             reduce using rule 15 (type -> TYPE .)
    AT              reduce using rule 15 (type -> TYPE .)
    PLUS            reduce using rule 15 (type -> TYPE .)
    MINUS           reduce using rule 15 (type -> TYPE .)
    TIMES           reduce using rule 15 (type -> TYPE .)
    DIVIDE          reduce using rule 15 (type -> TYPE .)
    LT              reduce using rule 15 (type -> TYPE .)
    LE              reduce using rule 15 (type -> TYPE .)
    EQUALS          reduce using rule 15 (type -> TYPE .)
    SEMI            reduce using rule 15 (type -> TYPE .)
    LOOP            reduce using rule 15 (type -> TYPE .)
    RPAREN          reduce using rule 15 (type -> TYPE .)
    THEN            reduce using rule 15 (type -> TYPE .)
    COMMA           reduce using rule 15 (type -> TYPE .)
    RBRACE          reduce using rule 15 (type -> TYPE .)
    POOL            reduce using rule 15 (type -> TYPE .)
    ELSE            reduce using rule 15 (type -> TYPE .)
    FI              reduce using rule 15 (type -> TYPE .)
    IN              reduce using rule 15 (type -> TYPE .)
    LBRACE          reduce using rule 15 (type -> TYPE .)
    LARROW          reduce using rule 15 (type -> TYPE .)
    INHERITS        reduce using rule 15 (type -> TYPE .)


state 6

    (4) class -> CLASS type . LBRACE featurelist RBRACE
    (5) class -> CLASS type . INHERITS type LBRACE featurelist RBRACE

    LBRACE          shift and go to state 9
    INHERITS        shift and go to state 8


state 7

    (2) classlist -> class SEMI .
    (3) classlist -> class SEMI . classlist
    (2) classlist -> . class SEMI
    (3) classlist -> . class SEMI classlist
    (4) class -> . CLASS type LBRACE featurelist RBRACE
    (5) class -> . CLASS type INHERITS type LBRACE featurelist RBRACE

    $end            reduce using rule 2 (classlist -> class SEMI .)
    CLASS           shift and go to state 2

    classlist                      shift and go to state 10
    class                          shift and go to state 4

state 8

    (5) class -> CLASS type INHERITS . type LBRACE featurelist RBRACE
    (15) type -> . TYPE

    TYPE            shift and go to state 5

    type                           shift and go to state 11

state 9

    (4) class -> CLASS type LBRACE . featurelist RBRACE
    (6) featurelist -> .
    (7) featurelist -> . feature SEMI featurelist
    (8) feature -> . identifier COLON type
    (9) feature -> . identifier COLON type LARROW expr
    (10) feature -> . identifier LPAREN formallist RPAREN COLON type LBRACE expr RBRACE
    (11) feature -> . identifier LPAREN RPAREN COLON type LBRACE expr RBRACE
    (16) identifier -> . IDENTIFIER

    RBRACE          reduce using rule 6 (featurelist -> .)
    IDENTIFIER      shift and go to state 14

    feature                        shift and go to state 12
    featurelist                    shift and go to state 13
    identifier                     shift and go to state 15

state 10

    (3) classlist -> class SEMI classlist .

    $end            reduce using rule 3 (classlist -> class SEMI classlist .)


state 11

    (5) class -> CLASS type INHERITS type . LBRACE featurelist RBRACE

    LBRACE          shift and go to state 16


state 12

    (7) featurelist -> feature . SEMI featurelist

    SEMI            shift and go to state 17


state 13

    (4) class -> CLASS type LBRACE featurelist . RBRACE

    RBRACE          shift and go to state 18


state 14

    (16) identifier -> IDENTIFIER .

    COLON           reduce using rule 16 (identifier -> IDENTIFIER .)
    LARROW          reduce using rule 16 (identifier -> IDENTIFIER .)
    LPAREN          reduce using rule 16 (identifier -> IDENTIFIER .)
    DOT             reduce using rule 16 (identifier -> IDENTIFIER .)
    AT              reduce using rule 16 (identifier -> IDENTIFIER .)
    PLUS            reduce using rule 16 (identifier -> IDENTIFIER .)
    MINUS           reduce using rule 16 (identifier -> IDENTIFIER .)
    TIMES           reduce using rule 16 (identifier -> IDENTIFIER .)
    DIVIDE          reduce using rule 16 (identifier -> IDENTIFIER .)
    LT              reduce using rule 16 (identifier -> IDENTIFIER .)
    LE              reduce using rule 16 (identifier -> IDENTIFIER .)
    EQUALS          reduce using rule 16 (identifier -> IDENTIFIER .)
    SEMI            reduce using rule 16 (identifier -> IDENTIFIER .)
    LOOP            reduce using rule 16 (identifier -> IDENTIFIER .)
    RPAREN          reduce using rule 16 (identifier -> IDENTIFIER .)
    THEN            reduce using rule 16 (identifier -> IDENTIFIER .)
    COMMA           reduce using rule 16 (identifier -> IDENTIFIER .)
    RBRACE          reduce using rule 16 (identifier -> IDENTIFIER .)
    POOL            reduce using rule 16 (identifier -> IDENTIFIER .)
    ELSE            reduce using rule 16 (identifier -> IDENTIFIER .)
    FI              reduce using rule 16 (identifier -> IDENTIFIER .)
    IN              reduce using rule 16 (identifier -> IDENTIFIER .)


state 15

    (8) feature -> identifier . COLON type
    (9) feature -> identifier . COLON type LARROW expr
    (10) feature -> identifier . LPAREN formallist RPAREN COLON type LBRACE expr RBRACE
    (11) feature -> identifier . LPAREN RPAREN COLON type LBRACE expr RBRACE

    COLON           shift and go to state 19
    LPAREN          shift and go to state 20


state 16

    (5) class -> CLASS type INHERITS type LBRACE . featurelist RBRACE
    (6) featurelist -> .
    (7) featurelist -> . feature SEMI featurelist
    (8) feature -> . identifier COLON type
    (9) feature -> . identifier COLON type LARROW expr
    (10) feature -> . identifier LPAREN formallist RPAREN COLON type LBRACE expr RBRACE
    (11) feature -> . identifier LPAREN RPAREN COLON type LBRACE expr RBRACE
    (16) identifier -> . IDENTIFIER

    RBRACE          reduce using rule 6 (featurelist -> .)
    IDENTIFIER      shift and go to state 14

    feature                        shift and go to state 12
    featurelist                    shift and go to state 21
    identifier                     shift and go to state 15

state 17

    (7) featurelist -> feature SEMI . featurelist
    (6) featurelist -> .
    (7) featurelist -> . feature SEMI featurelist
    (8) feature -> . identifier COLON type
    (9) feature -> . identifier COLON type LARROW expr
    (10) feature -> . identifier LPAREN formallist RPAREN COLON type LBRACE expr RBRACE
    (11) feature -> . identifier LPAREN RPAREN COLON type LBRACE expr RBRACE
    (16) identifier -> . IDENTIFIER

    RBRACE          reduce using rule 6 (featurelist -> .)
    IDENTIFIER      shift and go to state 14

    feature                        shift and go to state 12
    featurelist                    shift and go to state 22
    identifier                     shift and go to state 15

state 18

    (4) class -> CLASS type LBRACE featurelist RBRACE .

    SEMI            reduce using rule 4 (class -> CLASS type LBRACE featurelist RBRACE .)


state 19

    (8) feature -> identifier COLON . type
    (9) feature -> identifier COLON . type LARROW expr
    (15) type -> . TYPE

    TYPE            shift and go to state 5

    type                           shift and go to state 23

state 20

    (10) feature -> identifier LPAREN . formallist RPAREN COLON type LBRACE expr RBRACE
    (11) feature -> identifier LPAREN . RPAREN COLON type LBRACE expr RBRACE
    (12) formallist -> . formal
    (13) formallist -> . formal COMMA formallist
    (14) formal -> . identifier COLON type
    (16) identifier -> . IDENTIFIER

    RPAREN          shift and go to state 24
    IDENTIFIER      shift and go to state 14

    formal                         shift and go to state 27
    identifier                     shift and go to state 26
    formallist                     shift and go to state 25

state 21

    (5) class -> CLASS type INHERITS type LBRACE featurelist . RBRACE

    RBRACE          shift and go to state 28


state 22

    (7) featurelist -> feature SEMI featurelist .

    RBRACE          reduce using rule 7 (featurelist -> feature SEMI featurelist .)


state 23

    (8) feature -> identifier COLON type .
    (9) feature -> identifier COLON type . LARROW expr

    SEMI            reduce using rule 8 (feature -> identifier COLON type .)
    LARROW          shift and go to state 29


state 24

    (11) feature -> identifier LPAREN RPAREN . COLON type LBRACE expr RBRACE

    COLON           shift and go to state 30


state 25

    (10) feature -> identifier LPAREN formallist . RPAREN COLON type LBRACE expr RBRACE

    RPAREN          shift and go to state 31


state 26

    (14) formal -> identifier . COLON type

    COLON           shift and go to state 32


state 27

    (12) formallist -> formal .
    (13) formallist -> formal . COMMA formallist

    RPAREN          reduce using rule 12 (formallist -> formal .)
    COMMA           shift and go to state 33


state 28

    (5) class -> CLASS type INHERITS type LBRACE featurelist RBRACE .

    SEMI            reduce using rule 5 (class -> CLASS type INHERITS type LBRACE featurelist RBRACE .)


state 29

    (9) feature -> identifier COLON type LARROW . expr
    (17) expr -> . identifier LARROW expr
    (18) expr -> . expr DOT identifier LPAREN arglist RPAREN
    (19) expr -> . expr AT type DOT identifier LPAREN arglist RPAREN
    (20) expr -> . identifier LPAREN arglist RPAREN
    (27) expr -> . IF expr THEN expr ELSE expr FI
    (28) expr -> . WHILE expr LOOP expr POOL
    (29) expr -> . LBRACE exprlist RBRACE
    (30) expr -> . NEW type
    (31) expr -> . ISVOID expr
    (32) expr -> . expr PLUS expr
    (33) expr -> . expr MINUS expr
    (34) expr -> . expr TIMES expr
    (35) expr -> . expr DIVIDE expr
    (36) expr -> . TILDE expr
    (37) expr -> . expr LT expr
    (38) expr -> . expr LE expr
    (39) expr -> . expr EQUALS expr
    (40) expr -> . NOT expr
    (41) expr -> . LPAREN expr RPAREN
    (42) expr -> . identifier
    (43) expr -> . INTEGER
    (44) expr -> . STRING
    (45) expr -> . TRUE
    (46) expr -> . FALSE
    (47) expr -> . LET bindinglist IN expr
    (16) identifier -> . IDENTIFIER

    IF              shift and go to state 42
    WHILE           shift and go to state 34
    LBRACE          shift and go to state 43
    NEW             shift and go to state 35
    ISVOID          shift and go to state 37
    TILDE           shift and go to state 38
    NOT             shift and go to state 47
    LPAREN          shift and go to state 40
    INTEGER         shift and go to state 41
    STRING          shift and go to state 39
    TRUE            shift and go to state 36
    FALSE           shift and go to state 44
    LET             shift and go to state 46
    IDENTIFIER      shift and go to state 14

    identifier                     shift and go to state 48
    expr                           shift and go to state 45

state 30

    (11) feature -> identifier LPAREN RPAREN COLON . type LBRACE expr RBRACE
    (15) type -> . TYPE

    TYPE            shift and go to state 5

    type                           shift and go to state 49

state 31

    (10) feature -> identifier LPAREN formallist RPAREN . COLON type LBRACE expr RBRACE

    COLON           shift and go to state 50


state 32

    (14) formal -> identifier COLON . type
    (15) type -> . TYPE

    TYPE            shift and go to state 5

    type                           shift and go to state 51

state 33

    (13) formallist -> formal COMMA . formallist
    (12) formallist -> . formal
    (13) formallist -> . formal COMMA formallist
    (14) formal -> . identifier COLON type
    (16) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 14

    formallist                     shift and go to state 52
    identifier                     shift and go to state 26
    formal                         shift and go to state 27

state 34

    (28) expr -> WHILE . expr LOOP expr POOL
    (17) expr -> . identifier LARROW expr
    (18) expr -> . expr DOT identifier LPAREN arglist RPAREN
    (19) expr -> . expr AT type DOT identifier LPAREN arglist RPAREN
    (20) expr -> . identifier LPAREN arglist RPAREN
    (27) expr -> . IF expr THEN expr ELSE expr FI
    (28) expr -> . WHILE expr LOOP expr POOL
    (29) expr -> . LBRACE exprlist RBRACE
    (30) expr -> . NEW type
    (31) expr -> . ISVOID expr
    (32) expr -> . expr PLUS expr
    (33) expr -> . expr MINUS expr
    (34) expr -> . expr TIMES expr
    (35) expr -> . expr DIVIDE expr
    (36) expr -> . TILDE expr
    (37) expr -> . expr LT expr
    (38) expr -> . expr LE expr
    (39) expr -> . expr EQUALS expr
    (40) expr -> . NOT expr
    (41) expr -> . LPAREN expr RPAREN
    (42) expr -> . identifier
    (43) expr -> . INTEGER
    (44) expr -> . STRING
    (45) expr -> . TRUE
    (46) expr -> . FALSE
    (47) expr -> . LET bindinglist IN expr
    (16) identifier -> . IDENTIFIER

    IF              shift and go to state 42
    WHILE           shift and go to state 34
    LBRACE          shift and go to state 43
    NEW             shift and go to state 35
    ISVOID          shift and go to state 37
    TILDE           shift and go to state 38
    NOT             shift and go to state 47
    LPAREN          shift and go to state 40
    INTEGER         shift and go to state 41
    STRING          shift and go to state 39
    TRUE            shift and go to state 36
    FALSE           shift and go to state 44
    LET             shift and go to state 46
    IDENTIFIER      shift and go to state 14

    expr                           shift and go to state 53
    identifier                     shift and go to state 48

state 35

    (30) expr -> NEW . type
    (15) type -> . TYPE

    TYPE            shift and go to state 5

    type                           shift and go to state 54

state 36

    (45) expr -> TRUE .

    DOT             reduce using rule 45 (expr -> TRUE .)
    AT              reduce using rule 45 (expr -> TRUE .)
    PLUS            reduce using rule 45 (expr -> TRUE .)
    MINUS           reduce using rule 45 (expr -> TRUE .)
    TIMES           reduce using rule 45 (expr -> TRUE .)
    DIVIDE          reduce using rule 45 (expr -> TRUE .)
    LT              reduce using rule 45 (expr -> TRUE .)
    LE              reduce using rule 45 (expr -> TRUE .)
    EQUALS          reduce using rule 45 (expr -> TRUE .)
    SEMI            reduce using rule 45 (expr -> TRUE .)
    LOOP            reduce using rule 45 (expr -> TRUE .)
    RPAREN          reduce using rule 45 (expr -> TRUE .)
    THEN            reduce using rule 45 (expr -> TRUE .)
    COMMA           reduce using rule 45 (expr -> TRUE .)
    RBRACE          reduce using rule 45 (expr -> TRUE .)
    POOL            reduce using rule 45 (expr -> TRUE .)
    ELSE            reduce using rule 45 (expr -> TRUE .)
    FI              reduce using rule 45 (expr -> TRUE .)
    IN              reduce using rule 45 (expr -> TRUE .)


state 37

    (31) expr -> ISVOID . expr
    (17) expr -> . identifier LARROW expr
    (18) expr -> . expr DOT identifier LPAREN arglist RPAREN
    (19) expr -> . expr AT type DOT identifier LPAREN arglist RPAREN
    (20) expr -> . identifier LPAREN arglist RPAREN
    (27) expr -> . IF expr THEN expr ELSE expr FI
    (28) expr -> . WHILE expr LOOP expr POOL
    (29) expr -> . LBRACE exprlist RBRACE
    (30) expr -> . NEW type
    (31) expr -> . ISVOID expr
    (32) expr -> . expr PLUS expr
    (33) expr -> . expr MINUS expr
    (34) expr -> . expr TIMES expr
    (35) expr -> . expr DIVIDE expr
    (36) expr -> . TILDE expr
    (37) expr -> . expr LT expr
    (38) expr -> . expr LE expr
    (39) expr -> . expr EQUALS expr
    (40) expr -> . NOT expr
    (41) expr -> . LPAREN expr RPAREN
    (42) expr -> . identifier
    (43) expr -> . INTEGER
    (44) expr -> . STRING
    (45) expr -> . TRUE
    (46) expr -> . FALSE
    (47) expr -> . LET bindinglist IN expr
    (16) identifier -> . IDENTIFIER

    IF              shift and go to state 42
    WHILE           shift and go to state 34
    LBRACE          shift and go to state 43
    NEW             shift and go to state 35
    ISVOID          shift and go to state 37
    TILDE           shift and go to state 38
    NOT             shift and go to state 47
    LPAREN          shift and go to state 40
    INTEGER         shift and go to state 41
    STRING          shift and go to state 39
    TRUE            shift and go to state 36
    FALSE           shift and go to state 44
    LET             shift and go to state 46
    IDENTIFIER      shift and go to state 14

    expr                           shift and go to state 55
    identifier                     shift and go to state 48

state 38

    (36) expr -> TILDE . expr
    (17) expr -> . identifier LARROW expr
    (18) expr -> . expr DOT identifier LPAREN arglist RPAREN
    (19) expr -> . expr AT type DOT identifier LPAREN arglist RPAREN
    (20) expr -> . identifier LPAREN arglist RPAREN
    (27) expr -> . IF expr THEN expr ELSE expr FI
    (28) expr -> . WHILE expr LOOP expr POOL
    (29) expr -> . LBRACE exprlist RBRACE
    (30) expr -> . NEW type
    (31) expr -> . ISVOID expr
    (32) expr -> . expr PLUS expr
    (33) expr -> . expr MINUS expr
    (34) expr -> . expr TIMES expr
    (35) expr -> . expr DIVIDE expr
    (36) expr -> . TILDE expr
    (37) expr -> . expr LT expr
    (38) expr -> . expr LE expr
    (39) expr -> . expr EQUALS expr
    (40) expr -> . NOT expr
    (41) expr -> . LPAREN expr RPAREN
    (42) expr -> . identifier
    (43) expr -> . INTEGER
    (44) expr -> . STRING
    (45) expr -> . TRUE
    (46) expr -> . FALSE
    (47) expr -> . LET bindinglist IN expr
    (16) identifier -> . IDENTIFIER

    IF              shift and go to state 42
    WHILE           shift and go to state 34
    LBRACE          shift and go to state 43
    NEW             shift and go to state 35
    ISVOID          shift and go to state 37
    TILDE           shift and go to state 38
    NOT             shift and go to state 47
    LPAREN          shift and go to state 40
    INTEGER         shift and go to state 41
    STRING          shift and go to state 39
    TRUE            shift and go to state 36
    FALSE           shift and go to state 44
    LET             shift and go to state 46
    IDENTIFIER      shift and go to state 14

    expr                           shift and go to state 56
    identifier                     shift and go to state 48

state 39

    (44) expr -> STRING .

    DOT             reduce using rule 44 (expr -> STRING .)
    AT              reduce using rule 44 (expr -> STRING .)
    PLUS            reduce using rule 44 (expr -> STRING .)
    MINUS           reduce using rule 44 (expr -> STRING .)
    TIMES           reduce using rule 44 (expr -> STRING .)
    DIVIDE          reduce using rule 44 (expr -> STRING .)
    LT              reduce using rule 44 (expr -> STRING .)
    LE              reduce using rule 44 (expr -> STRING .)
    EQUALS          reduce using rule 44 (expr -> STRING .)
    SEMI            reduce using rule 44 (expr -> STRING .)
    LOOP            reduce using rule 44 (expr -> STRING .)
    RPAREN          reduce using rule 44 (expr -> STRING .)
    THEN            reduce using rule 44 (expr -> STRING .)
    COMMA           reduce using rule 44 (expr -> STRING .)
    RBRACE          reduce using rule 44 (expr -> STRING .)
    POOL            reduce using rule 44 (expr -> STRING .)
    ELSE            reduce using rule 44 (expr -> STRING .)
    FI              reduce using rule 44 (expr -> STRING .)
    IN              reduce using rule 44 (expr -> STRING .)


state 40

    (41) expr -> LPAREN . expr RPAREN
    (17) expr -> . identifier LARROW expr
    (18) expr -> . expr DOT identifier LPAREN arglist RPAREN
    (19) expr -> . expr AT type DOT identifier LPAREN arglist RPAREN
    (20) expr -> . identifier LPAREN arglist RPAREN
    (27) expr -> . IF expr THEN expr ELSE expr FI
    (28) expr -> . WHILE expr LOOP expr POOL
    (29) expr -> . LBRACE exprlist RBRACE
    (30) expr -> . NEW type
    (31) expr -> . ISVOID expr
    (32) expr -> . expr PLUS expr
    (33) expr -> . expr MINUS expr
    (34) expr -> . expr TIMES expr
    (35) expr -> . expr DIVIDE expr
    (36) expr -> . TILDE expr
    (37) expr -> . expr LT expr
    (38) expr -> . expr LE expr
    (39) expr -> . expr EQUALS expr
    (40) expr -> . NOT expr
    (41) expr -> . LPAREN expr RPAREN
    (42) expr -> . identifier
    (43) expr -> . INTEGER
    (44) expr -> . STRING
    (45) expr -> . TRUE
    (46) expr -> . FALSE
    (47) expr -> . LET bindinglist IN expr
    (16) identifier -> . IDENTIFIER

    IF              shift and go to state 42
    WHILE           shift and go to state 34
    LBRACE          shift and go to state 43
    NEW             shift and go to state 35
    ISVOID          shift and go to state 37
    TILDE           shift and go to state 38
    NOT             shift and go to state 47
    LPAREN          shift and go to state 40
    INTEGER         shift and go to state 41
    STRING          shift and go to state 39
    TRUE            shift and go to state 36
    FALSE           shift and go to state 44
    LET             shift and go to state 46
    IDENTIFIER      shift and go to state 14

    expr                           shift and go to state 57
    identifier                     shift and go to state 48

state 41

    (43) expr -> INTEGER .

    DOT             reduce using rule 43 (expr -> INTEGER .)
    AT              reduce using rule 43 (expr -> INTEGER .)
    PLUS            reduce using rule 43 (expr -> INTEGER .)
    MINUS           reduce using rule 43 (expr -> INTEGER .)
    TIMES           reduce using rule 43 (expr -> INTEGER .)
    DIVIDE          reduce using rule 43 (expr -> INTEGER .)
    LT              reduce using rule 43 (expr -> INTEGER .)
    LE              reduce using rule 43 (expr -> INTEGER .)
    EQUALS          reduce using rule 43 (expr -> INTEGER .)
    SEMI            reduce using rule 43 (expr -> INTEGER .)
    LOOP            reduce using rule 43 (expr -> INTEGER .)
    RPAREN          reduce using rule 43 (expr -> INTEGER .)
    THEN            reduce using rule 43 (expr -> INTEGER .)
    COMMA           reduce using rule 43 (expr -> INTEGER .)
    RBRACE          reduce using rule 43 (expr -> INTEGER .)
    POOL            reduce using rule 43 (expr -> INTEGER .)
    ELSE            reduce using rule 43 (expr -> INTEGER .)
    FI              reduce using rule 43 (expr -> INTEGER .)
    IN              reduce using rule 43 (expr -> INTEGER .)


state 42

    (27) expr -> IF . expr THEN expr ELSE expr FI
    (17) expr -> . identifier LARROW expr
    (18) expr -> . expr DOT identifier LPAREN arglist RPAREN
    (19) expr -> . expr AT type DOT identifier LPAREN arglist RPAREN
    (20) expr -> . identifier LPAREN arglist RPAREN
    (27) expr -> . IF expr THEN expr ELSE expr FI
    (28) expr -> . WHILE expr LOOP expr POOL
    (29) expr -> . LBRACE exprlist RBRACE
    (30) expr -> . NEW type
    (31) expr -> . ISVOID expr
    (32) expr -> . expr PLUS expr
    (33) expr -> . expr MINUS expr
    (34) expr -> . expr TIMES expr
    (35) expr -> . expr DIVIDE expr
    (36) expr -> . TILDE expr
    (37) expr -> . expr LT expr
    (38) expr -> . expr LE expr
    (39) expr -> . expr EQUALS expr
    (40) expr -> . NOT expr
    (41) expr -> . LPAREN expr RPAREN
    (42) expr -> . identifier
    (43) expr -> . INTEGER
    (44) expr -> . STRING
    (45) expr -> . TRUE
    (46) expr -> . FALSE
    (47) expr -> . LET bindinglist IN expr
    (16) identifier -> . IDENTIFIER

    IF              shift and go to state 42
    WHILE           shift and go to state 34
    LBRACE          shift and go to state 43
    NEW             shift and go to state 35
    ISVOID          shift and go to state 37
    TILDE           shift and go to state 38
    NOT             shift and go to state 47
    LPAREN          shift and go to state 40
    INTEGER         shift and go to state 41
    STRING          shift and go to state 39
    TRUE            shift and go to state 36
    FALSE           shift and go to state 44
    LET             shift and go to state 46
    IDENTIFIER      shift and go to state 14

    expr                           shift and go to state 58
    identifier                     shift and go to state 48

state 43

    (29) expr -> LBRACE . exprlist RBRACE
    (21) exprlist -> . expr SEMI
    (22) exprlist -> . expr SEMI exprlist
    (17) expr -> . identifier LARROW expr
    (18) expr -> . expr DOT identifier LPAREN arglist RPAREN
    (19) expr -> . expr AT type DOT identifier LPAREN arglist RPAREN
    (20) expr -> . identifier LPAREN arglist RPAREN
    (27) expr -> . IF expr THEN expr ELSE expr FI
    (28) expr -> . WHILE expr LOOP expr POOL
    (29) expr -> . LBRACE exprlist RBRACE
    (30) expr -> . NEW type
    (31) expr -> . ISVOID expr
    (32) expr -> . expr PLUS expr
    (33) expr -> . expr MINUS expr
    (34) expr -> . expr TIMES expr
    (35) expr -> . expr DIVIDE expr
    (36) expr -> . TILDE expr
    (37) expr -> . expr LT expr
    (38) expr -> . expr LE expr
    (39) expr -> . expr EQUALS expr
    (40) expr -> . NOT expr
    (41) expr -> . LPAREN expr RPAREN
    (42) expr -> . identifier
    (43) expr -> . INTEGER
    (44) expr -> . STRING
    (45) expr -> . TRUE
    (46) expr -> . FALSE
    (47) expr -> . LET bindinglist IN expr
    (16) identifier -> . IDENTIFIER

    IF              shift and go to state 42
    WHILE           shift and go to state 34
    LBRACE          shift and go to state 43
    NEW             shift and go to state 35
    ISVOID          shift and go to state 37
    TILDE           shift and go to state 38
    NOT             shift and go to state 47
    LPAREN          shift and go to state 40
    INTEGER         shift and go to state 41
    STRING          shift and go to state 39
    TRUE            shift and go to state 36
    FALSE           shift and go to state 44
    LET             shift and go to state 46
    IDENTIFIER      shift and go to state 14

    expr                           shift and go to state 60
    identifier                     shift and go to state 48
    exprlist                       shift and go to state 59

state 44

    (46) expr -> FALSE .

    DOT             reduce using rule 46 (expr -> FALSE .)
    AT              reduce using rule 46 (expr -> FALSE .)
    PLUS            reduce using rule 46 (expr -> FALSE .)
    MINUS           reduce using rule 46 (expr -> FALSE .)
    TIMES           reduce using rule 46 (expr -> FALSE .)
    DIVIDE          reduce using rule 46 (expr -> FALSE .)
    LT              reduce using rule 46 (expr -> FALSE .)
    LE              reduce using rule 46 (expr -> FALSE .)
    EQUALS          reduce using rule 46 (expr -> FALSE .)
    SEMI            reduce using rule 46 (expr -> FALSE .)
    LOOP            reduce using rule 46 (expr -> FALSE .)
    RPAREN          reduce using rule 46 (expr -> FALSE .)
    THEN            reduce using rule 46 (expr -> FALSE .)
    COMMA           reduce using rule 46 (expr -> FALSE .)
    RBRACE          reduce using rule 46 (expr -> FALSE .)
    POOL            reduce using rule 46 (expr -> FALSE .)
    ELSE            reduce using rule 46 (expr -> FALSE .)
    FI              reduce using rule 46 (expr -> FALSE .)
    IN              reduce using rule 46 (expr -> FALSE .)


state 45

    (9) feature -> identifier COLON type LARROW expr .
    (18) expr -> expr . DOT identifier LPAREN arglist RPAREN
    (19) expr -> expr . AT type DOT identifier LPAREN arglist RPAREN
    (32) expr -> expr . PLUS expr
    (33) expr -> expr . MINUS expr
    (34) expr -> expr . TIMES expr
    (35) expr -> expr . DIVIDE expr
    (37) expr -> expr . LT expr
    (38) expr -> expr . LE expr
    (39) expr -> expr . EQUALS expr

    SEMI            reduce using rule 9 (feature -> identifier COLON type LARROW expr .)
    DOT             shift and go to state 69
    AT              shift and go to state 66
    PLUS            shift and go to state 67
    MINUS           shift and go to state 68
    TIMES           shift and go to state 63
    DIVIDE          shift and go to state 61
    LT              shift and go to state 64
    LE              shift and go to state 65
    EQUALS          shift and go to state 62


state 46

    (47) expr -> LET . bindinglist IN expr
    (48) bindinglist -> . binding
    (49) bindinglist -> . binding COMMA bindinglist
    (50) binding -> . identifier COLON type
    (51) binding -> . identifier COLON type LARROW expr
    (16) identifier -> . IDENTIFIER

    IDENTIFIER      shift and go to state 14

    binding                        shift and go to state 70
    identifier                     shift and go to state 72
    bindinglist                    shift and go to state 71

state 47
